compiler/tools/fpp-check/test/undef/constant_2.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/undef/constant_2.fpp: 1.14
constant b = M.a
             ^
error: undefined symbol M
